--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ LIMITS_MAX_PAYLOAD_SIZE=100mb
 FIREBASE_SERVICE_ACCOUNT=
 FIREBASE_BUCKET=
 
-S3_ENDPOINT=https://c01059dc76982caee36c1441ab55d630.r2.cloudflarestorage.com/fastbin-bket
+S3_ENDPOINT=https://c01059dc76982caee36c1441ab55d630.r2.cloudflarestorage.com/
 S3_KEY=3363e3c58915007f98ee74aa306a90ed4fa13
 S3_SECRET=rIbr6BBABuUqf0TR1qbcISts2BtiMi1bFNyWBnJC
 S3_BUCKET=fastbin-bket
